[package]
name = "isis_streaming_data_types"
version = "0.0.0"
edition = "2024"
description = "Streaming data types for the ISIS Neutron & Muon Source"
license-file = "../LICENSE"
documentation = "https://github.com/isisComputingGroup/streaming-data-types"
homepage = "https://github.com/isisComputingGroup/streaming-data-types"
repository = "https://github.com/isisComputingGroup/streaming-data-types"

[dependencies]
flatbuffers = "25.12.19"
